# lakeFS-samples

./: .gitmodules  README.md  docker-compose.yml  lakeFS - DeltaLake session.py  lakeFSOnSynapse.ipynb
00_notebooks/: 00_index.ipynb  R-client.ipynb  R-nyc.ipynb  R-weather.ipynb  R.ipynb  _config.ipynb  data-collaboration.ipynb  data-lineage.ipynb  delta-diff.ipynb  delta-lake-python.ipynb  delta-lake.ipynb  dev-test.ipynb  hooks-metadata-validation.ipynb  hooks-schema-and-pii-validation.ipynb  hooks-schema-validation.ipynb  hooks-webhooks-demo.ipynb  iceberg-books-glue-catalog-sync.ipynb  iceberg-books-spark-medallion.ipynb  iceberg-books-spark.ipynb  iceberg-books-trino.ipynb  iceberg-books.ipynb  iceberg-lakefs-basic.ipynb  iceberg-lakefs-default.ipynb  iceberg-lakefs-nyc.ipynb  import-multiple-buckets.ipynb  metadata-search.ipynb  ml-experimentation-wine-quality-prediction.ipynb  ml-reproducibility.ipynb  multi-storage-backends-demo.ipynb  rbac-demo.ipynb  reprocess-backfill-data.ipynb  spark-demo.ipynb  version-control-of-multi-buckets-pipelines.ipynb
01_standalone_examples/e2b/shared/: pyproject.toml
01_standalone_examples/e2b/shared/lakefs_e2b_common/: __init__.py  env.py  lakefs_client.py
01_standalone_examples/e2b/usecases/01-sdk-orchestrator/: .env.example  README.md  pyproject.toml
01_standalone_examples/e2b/usecases/01-sdk-orchestrator/src/lakefs_e2b_poc/: agent_job.py  config.py  inspect.py  lakefs_client.py  orchestrator.py  seed.py  validation.py
01_standalone_examples/e2b/usecases/01-sdk-orchestrator/tests/: test_validation.py
01_standalone_examples/e2b/usecases/02-three-phase-repair/: .env.example  README.md  pyproject.toml
01_standalone_examples/e2b/usecases/02-three-phase-repair/data/: sample_bad_data.csv
01_standalone_examples/e2b/usecases/02-three-phase-repair/lakefs_actions/: validate_data.yaml
01_standalone_examples/e2b/usecases/02-three-phase-repair/prompts/: repair_agent_system_prompt.md
01_standalone_examples/e2b/usecases/02-three-phase-repair/scripts/: run_demo.py  setup_lakefs_repo.py  upload_sample_data.py
01_standalone_examples/e2b/usecases/02-three-phase-repair/src/agent_demo/: agent_loop.py  config.py  e2b_runner.py  main.py  openai_agent.py  reporting.py  validation.py
01_standalone_examples/e2b/usecases/03-mount-receipts/: .env.example  README.md  pyproject.toml
01_standalone_examples/e2b/usecases/03-mount-receipts/lakefs_actions/: validate_ledger.yaml
01_standalone_examples/e2b/usecases/03-mount-receipts/scripts/: benchmark_provision.py  run_demo.py  setup_lakefs_repo.py  upload_archive.py  upload_sample_data.py
01_standalone_examples/e2b/usecases/03-mount-receipts/src/mount_receipts/: __init__.py  agent_runner.py  codegen.py  config.py  e2b_session.py  extraction.py  main.py  orchestrator.py  sample_data.py  validation.py
01_standalone_examples/e2b/usecases/03-mount-receipts/template/: e2b.Dockerfile  e2b.toml
01_standalone_examples/e2b/usecases/03-mount-receipts/tests/: test_codegen.py  test_validation.py
(+1736 files in other folders)
