[project]
name = "lakefs-e2b-common"
version = "0.1.0"
description = "Shared lakeFS + E2B plumbing for the agentic demos (SDK client wrappers, env loading)"
requires-python = ">=3.11"
dependencies = [
    "lakefs",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lakefs_e2b_common"]
