[project]
name = "lakefs-e2b-poc"
version = "0.1.0"
description = "Agentic Data PR: isolated compute (E2B) + isolated data branches (lakeFS)"
requires-python = ">=3.11"
dependencies = [
    "e2b>=1.0.0",
    "lakefs",
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lakefs_e2b_poc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
