[project]
name = "mount-receipts"
version = "0.1.0"
description = "Agentic receipt/invoice curation into a clean ledger, using lakeFS Mount (everest) inside an E2B sandbox"
requires-python = ">=3.11"
dependencies = [
    "lakefs-e2b-common",
    "e2b>=1.0.0",
    "lakefs",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",          # vision model: gpt-4o
    "python-dateutil>=2.8.0", # date sanity checks
    # File/format helpers for the synthetic receipts + PDF rasterization:
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "pytest>=7.0.0",
]

[tool.uv.sources]
lakefs-e2b-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mount_receipts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
